@@ -1,5 +1,9 @@
 package com.dms.search.service;
 
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import org.springframework.data.elasticsearch.core.query.highlight.Highlight;
+import org.springframework.data.elasticsearch.core.query.highlight.HighlightField;
 import com.dms.search.elasticsearch.DocumentIndex;
 import com.dms.search.entity.User;
 import com.dms.search.repository.UserRepository;
@@ -7,54 +11,153 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.InvalidDataAccessResourceUsageException;
 import org.springframework.data.domain.*;
-import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
+import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.query.Criteria;
-import org.springframework.data.elasticsearch.core.query.CriteriaQuery;
-import org.springframework.data.elasticsearch.core.query.Query;
+import org.springframework.data.elasticsearch.core.query.HighlightQuery;
+import org.springframework.data.elasticsearch.core.query.highlight.HighlightFieldParameters;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
-import java.util.Collections;
+import java.text.Normalizer;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class DocumentSearchService {
-    private final ElasticsearchOperations elasticsearchOperations;
+    private final ElasticsearchTemplate elasticsearchTemplate;
     private final UserRepository userRepository;
+
+    private static final float MIN_SCORE = 30f;
+    private static final int MIN_SEARCH_LENGTH = 2;
+
+    private String normalizeText(String text) {
+        text = text.replaceAll("đ", "d").replaceAll("Đ", "D");
+
+        text = text.replaceAll("æ", "ae").replaceAll("œ", "oe");
+
+        return Normalizer.normalize(text, Normalizer.Form.NFD)
+                .replaceAll("\\p{InCombiningDiacriticalMarks}+", "")
+                .toLowerCase();
+    }
 
     public Page<DocumentIndex> searchDocuments(String searchQuery, String username, Pageable pageable) {
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new InvalidDataAccessResourceUsageException("User not found"));
 
         try {
-            // Create criteria for basic filtering
-            Criteria userCriteria = new Criteria("userId").is(user.getUserId());
+            // Clean and prepare the search query
+            String cleanQuery = searchQuery.trim();
+            String normalizedQuery = normalizeText(cleanQuery);
 
-            // Create search criteria with boosting and fuzzy matching
-            Criteria searchCriteria = new Criteria()
-                    .or(new Criteria("filename").boost(3.0f).fuzzy(searchQuery))
-                    .or(new Criteria("content").boost(1.0f).fuzzy(searchQuery));
+            if (!StringUtils.hasText(cleanQuery) || cleanQuery.length() < MIN_SEARCH_LENGTH) {
+                return Page.empty(pageable);
+            }
 
-            // Combine criteria
-            Criteria finalCriteria = new Criteria().and(userCriteria).and(searchCriteria);
+            // Build the bool query
+            Query boolQuery = new BoolQuery.Builder()
+                    .must(must -> must
+                            .term(term -> term
+                                    .field("userId")
+                                    .value(user.getUserId().toString())))
+                    .must(must -> must
+                            .bool(b -> b
+                                    // Original text search
+                                    .should(should -> should
+                                            .match(m -> m
+                                                    .field("filename")
+                                                    .query(cleanQuery)
+                                                    .boost(4.0f)))
+                                    .should(should -> should
+                                            .match(m -> m
+                                                    .field("content")
+                                                    .query(cleanQuery)
+                                                    .boost(2.0f)))
+                                    // Original phrase match
+                                    .should(should -> should
+                                            .matchPhrase(mp -> mp
+                                                    .field("filename")
+                                                    .query(cleanQuery)
+                                                    .boost(8.0f)))
+                                    .should(should -> should
+                                            .matchPhrase(mp -> mp
+                                                    .field("content")
+                                                    .query(cleanQuery)
+                                                    .boost(6.0f)))
+                                    // Normalized text search with fuzzy support
+                                    .should(should -> should
+                                            .match(m -> m
+                                                    .field("filename")
+                                                    .query(normalizedQuery)
+                                                    .fuzziness("1") // Allow up to 1 character difference
+                                                    .boost(3.0f)))
+                                    .should(should -> should
+                                            .match(m -> m
+                                                    .field("content")
+                                                    .query(normalizedQuery)
+                                                    .fuzziness("2") // Allow up to 2 character differences
+                                                    .boost(1.5f)))
+                                    // Multi-match for better cross-field relevance
+                                    .should(should -> should
+                                            .multiMatch(mm -> mm
+                                                    .query(cleanQuery)
+                                                    .fields("filename^4", "content^2")
+                                                    .type(co.elastic.clients.elasticsearch._types.query_dsl.TextQueryType.CrossFields)
+                                                    .operator(co.elastic.clients.elasticsearch._types.query_dsl.Operator.And)
+                                                    .boost(5.0f)))
+                                    // Require at least one of the should clauses to match
+                                    .minimumShouldMatch("1")))
+                    .build()._toQuery();
 
-            // Build query with criteria and sorting
-            Query query = new CriteriaQuery(finalCriteria)
-                    .addSort(Sort.by(Sort.Direction.DESC, "_score"))
-                    .setPageable(pageable);
+
+
+
+            // Optionally, set highlight parameters like pre and post tags, fragment size, etc.
+            HighlightFieldParameters filenameParams = HighlightFieldParameters.builder()
+                    .withPreTags("<em>")
+                    .withPostTags("</em>")
+                    .withFragmentSize(100)
+                    .withNumberOfFragments(3)
+                    .build();
+
+            HighlightFieldParameters contentParams = HighlightFieldParameters.builder()
+                    .withPreTags("<mark>")
+                    .withPostTags("</mark>")
+                    .withFragmentSize(150)
+                    .withNumberOfFragments(2)
+                    .build();
+
+            // Create highlight fields for the "filename" and "content" fields
+            HighlightField filenameHighlight = new HighlightField("filename", filenameParams);
+            HighlightField contentHighlight = new HighlightField("content", contentParams);
+
+            // Create a Highlight object with both fields and default parameters
+            Highlight highlight = new Highlight(List.of(filenameHighlight, contentHighlight));
+
+            HighlightQuery highlightQuery = new HighlightQuery(highlight, DocumentIndex.class);
+
+            // Create native query
+            NativeQuery nativeQuery = NativeQuery.builder()
+                    .withQuery(boolQuery)
+                    .withPageable(pageable)
+                    .withTrackScores(true)
+                    .withHighlightQuery(highlightQuery)
+                    .build();
 
             // Execute search
-            SearchHits<DocumentIndex> searchHits = elasticsearchOperations.search(
-                    query,
+            SearchHits<DocumentIndex> searchHits = elasticsearchTemplate.search(
+                    nativeQuery,
                     DocumentIndex.class
             );
 
-            // Process results
+            // Filter and process results
             List<DocumentIndex> documents = searchHits.getSearchHits().stream()
+                    .filter(hit -> hit.getScore() >= MIN_SCORE)
                     .map(SearchHit::getContent)
                     .collect(Collectors.toList());
 
@@ -72,21 +175,36 @@ public class DocumentSearchService {
 
     public List<String> getSuggestions(String prefix, String userId) {
         try {
-            // Create criteria for prefix matching
-            Criteria criteria = new Criteria("userId").is(userId)
-                    .and(new Criteria("filename").startsWith(prefix.toLowerCase()));
+            String normalizedPrefix = normalizeText(prefix);
 
-            // Create query with pagination
-            Query query = new CriteriaQuery(criteria)
-                    .setPageable(PageRequest.of(0, 5, Sort.by("filename").ascending()));
+            Query boolQuery = new BoolQuery.Builder()
+                    .must(must -> must
+                            .term(term -> term
+                                    .field("userId")
+                                    .value(userId)))
+                    .must(must -> must
+                            .bool(b -> b
+                                    .should(should -> should
+                                            .prefix(p -> p
+                                                    .field("filename")
+                                                    .value(prefix)))
+                                    .should(should -> should
+                                            .prefix(p -> p
+                                                    .field("filename")
+                                                    .value(normalizedPrefix)))
+                                    .minimumShouldMatch("1")))
+                    .build()._toQuery();
 
-            // Execute search
-            SearchHits<DocumentIndex> searchHits = elasticsearchOperations.search(
-                    query,
+            NativeQuery nativeQuery = NativeQuery.builder()
+                    .withQuery(boolQuery)
+                    .withPageable(PageRequest.of(0, 5, Sort.by("filename.raw").ascending()))
+                    .build();
+
+            SearchHits<DocumentIndex> searchHits = elasticsearchTemplate.search(
+                    nativeQuery,
                     DocumentIndex.class
             );
 
-            // Return unique suggestions
             return searchHits.getSearchHits().stream()
                     .map(hit -> hit.getContent().getFilename())
                     .distinct()
@@ -94,7 +212,7 @@ public class DocumentSearchService {
 
         } catch (Exception e) {
             log.error("Error getting suggestions", e);
-            return Collections.emptyList();
+            return List.of();
         }
     }
 }
